@@ -1,5 +1,9 @@
 # $Id$
 
+2007-02-09	Dmitry E. Demidov
+
+	* core/Form/Primitives/PrimitiveImage.class.php: fix return value.
+
 2007-02-06	Denis M. Gabaidulin
 
 	* core/Form/Primitives/PrimitiveIdentifierList.class.php: list of
